@@ -37,6 +37,9 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? ????
 	- Restored window background drawing, particularly the 'plastic'
 	  scheme's background (STR #3059). This was a regression since
 	  FLTK 1.3.0.
+  - Fixed possible bad border effect when a set of radio menu items
+    is located first in its menu (STR #3176): Fl_Menu_Item::set_only()
+    is deprecated and replaced by Fl_Menu_::set_only(Fl_Menu_item*).
 
 
 CHANGES IN FLTK 1.3.3					RELEASED: Nov 03 2014
